--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -407,7 +407,15 @@
    },
    "outputs": [],
    "source": [
-    "    ### Your code here ###"
+    "career = Master[[\"playerID\",\"debut\",\"finalGame\"]].copy()\n",
+    "playerLS = playerstats.groupby(\"playerID\", as_index = False).mean()[[\"playerID\", \"1B_rate\", \"2B_rate\", \"3B_rate\", \"HR_rate\", \"BB_rate\"]].copy()\n",
+    "\n",
+    "playerLS = pd.merge(career, playerLS, how = 'inner', on = [\"playerID\"])\n",
+    "def getyear(x):\n",
+    "    return int(x.split(\"-\")[0])\n",
+    "\n",
+    "playerLS[\"debut\"] = playerLS[\"debut\"].apply(getyear)\n",
+    "playerLS[\"finalGame\"] = playerLS[\"finalGame\"].apply(getyear)"
    ]
   },
   {
@@ -425,7 +433,7 @@
    },
    "outputs": [],
    "source": [
-    "### Your code here ###"
+    "playerLS.head()"
    ]
   },
   {
@@ -445,7 +453,7 @@
    },
    "outputs": [],
    "source": [
-    "### Your code here ###"
+    "playerLS[\"OPW\"]=lm3.predict(playerLS[[\"3B_rate\", \"1B_rate\", \"2B_rate\", \"BB_rate\", \"HR_rate\"]])"
    ]
   },
   {
@@ -465,7 +473,19 @@
    },
    "outputs": [],
    "source": [
-    "### Your code here ###"
+    "from collections import defaultdict\n",
+    "\n",
+    "def find_pos(df):\n",
+    "    positions = df.POS\n",
+    "    d = defaultdict(int)\n",
+    "    for pos in positions:\n",
+    "        d[pos] += 1\n",
+    "    result = max(d.iteritems(), key=lambda x: x[1])\n",
+    "    return result[0]\n",
+    "\n",
+    "pos_df = Fielding.groupby(\"playerID\").apply(find_pos).reset_index().rename(columns={0:\"POS\"})\n",
+    "\n",
+    "playerLS = pd.merge(pd.merge(pos_df, playerLS, how = \"inner\", on = [\"playerID\"]), medianSalaries, how = \"inner\", on = [\"playerID\"])"
    ]
   },
   {
@@ -483,7 +503,7 @@
    },
    "outputs": [],
    "source": [
-    "### Your code here ###"
+    "playerLS.head()"
    ]
   },
   {
